--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="card-operation">
                     <img src="./icons/line-gray.svg" alt="ar">
                     <span class="charter">Charter Request</span>
-                    <img src="./icons/arrow-grey-left.svg" alt="ar">
+                    <img src="./icons/arrow-grey-right.svg" alt="ar">
                 </div>
                 <div class="card-operation">
                     <span class="crm"><img src="./icons/database.svg" alt="img">CRM: Сustomers, Suppliers, Operators database</span>
